--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<html><head></head><body><h1>テストページ！</h1><p>成功！</p></body></html>
+<html><head><meta charset='UTF-8'></head><body><h1>テストページ！</h1><p>成功！</p></body></html>
