--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head><script src=“https://fukuoka-nothotel-fighters.github.io/analytics/script.js”></script>
+<head><script src=“https://fukuoka-nothotel-fighters.github.io/analytics/script.js”></script><script src=“https://fukuoka-nothotel-fighters.github.io/analytics/script.js”></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
